# assignment-quiz

./: .gitignore  README.md  crowdin.yml  main.py  pyproject.toml
.lesson/: instructions.md  solution.md
i18n/uk/: Assignment Quiz's TM-en_uk.csv  instructions.md
tests/: test_solution.py
