[tool.poetry]
name = "assignment-quiz"
version = "1.0.0"
description = "Quiz scpit training project"
authors = ["Serhii Horodilov <sgorodil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
